# whiteboard-sib-access-nota

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
debian/: changelog  control  rules
include/: Makefile.am  Makefile.in  nota_stub_handler.h  serverthread.h  sib_controller.h  sib_nota_access.h  sib_server.h  sib_service.h
src/: Makefile.am  Makefile.in  NoTA_System_ResourceMng_R01_01_common.h  NoTA_System_ResourceMng_R01_01_user.c  NoTA_System_ResourceMng_R01_01_user.h  NoTA_System_ResourceMng_R01_01_v03.xml  SibAccessNota_common.h  SibAccessNota_user.c  SibAccessNota_user.h  main.c  nota_stub_handler.c  serverthread.c  sib.xml  sib_controller.c  sib_nota_access.c  sib_server.c  sib_service.c
